--- a/public/speedoflight/index.html
+++ b/public/speedoflight/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head><title>Speed Of Light</title>
     <link rel="stylesheet" href="./global.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
 </body>
