--- a/public/speedoflight/index.html
+++ b/public/speedoflight/index.html
@@ -5,10 +5,6 @@
 </head>
 <body>
 </body>
-<script type="module" src="index.mjs">Game()
-    console.log("Game")
-</script>
-<script>
-    console.log("Game")
+<script type="module" src="index.mjs">
 </script>
 </html>
